--- a/style.css
+++ b/style.css
@@ -161,6 +161,39 @@ a:hover {
     align-items: center;
     gap: 30px;
   }
+
+    .lines-container {
+    position: relative;
+    width: 30px;
+    height: 20px;
+    cursor: pointer;
+  }
+
+  .line {
+    position: absolute;
+    width: 30px;
+    height: 4px;
+    background-color: #45dac0;
+    transition: transform 0.5s ease;
+  }
+
+  .line-1 {
+    top: 0;
+    border-radius: 10px;
+  }
+
+  .line-2 {
+    bottom: 0;
+    border-radius: 10px;
+  }
+
+  .rotated .line-1 {
+    transform: rotate(45deg) translateY(11px);
+  }
+
+  .rotated .line-2 {
+    transform: rotate(-45deg) translateY(-11px);
+  }
 }
 
 /* /////////////// */
