--- a/style.css
+++ b/style.css
@@ -444,7 +444,7 @@ header p {
     text-decoration: none;
       color: black;
     font-size:"20px"
-    transition: all 0.3s ease;
+  transition: transform 0.3s ease, ;
   }
   
   .preview-link:hover {
@@ -455,7 +455,7 @@ header p {
     text-decoration: none;
     color: black;
       font-size:"20px"
-    transition: all 0.3s ease;
+  transition: transform 0.3s ease, ;
   }
   
   .git-link:hover {
