--- a/style.css
+++ b/style.css
@@ -439,27 +439,14 @@ header p {
     align-items: center;
     gap: 20px;
   }
-  
-  .preview-link {
-    text-decoration: none;
+  .project-links a{
+        text-decoration: none;
       color: black;
-    font-size:"20px"
+    font-size:"25px"
   transition: transform 0.3s ease, ;
   }
-  
-  .preview-link:hover {
+  .project-link a:hover {
     color: #45dac0;
-  }
-  
-  .git-link {
-    text-decoration: none;
-    color: black;
-      font-size:"20px"
-  transition: transform 0.3s ease, ;
-  }
-  
-  .git-link:hover {
-      color: #45dac0;
   }
 
 @media (max-width:910px) {
