--- a/style.css
+++ b/style.css
@@ -426,7 +426,7 @@ header p {
 }
 /*  */
 .project-title {
-  padding: 10px 25px 10px 25px;
+  padding: 10px 25px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -469,13 +469,8 @@ header p {
     font-size: 2rem;
     margin: 0px 0px 50px 0px;
   }
-}
-
-@media (max-width:600px) {
-  #projects h2 {
-    text-align: center;
-    font-size: 2rem;
-    margin: 0px 0px 50px 0px;
+  .project-title {
+  padding: 10px 15px;
   }
 }
 /*  */
