--- a/style.css
+++ b/style.css
@@ -174,7 +174,6 @@ a:hover {
   }
 }
 
-/* /////////////// */
 @media (max-width: 600px) {
   .navigation {
     display: flex;
@@ -184,13 +183,18 @@ a:hover {
   .social_nav {
     display: none;
   }
-
+.logo-name h2{
+font-size: 1.3rem;
+}
 }
 @media (max-width: 385px) {
   .navigation {
     display: flex;
     justify-content: space-between;
     padding: 15px 5px 0px 5px;
+}
+  .logo-name h2{
+font-size: 1.1rem;
 }
 }
 
