--- a/style.css
+++ b/style.css
@@ -388,6 +388,9 @@ header p {
   font-family: Arial, sans-serif;
   margin: 0px 0px 50px 30px;
 }
+.title{
+  color: #45dac0;
+}
 
 .projects-section {
   display: flex;
