--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ a:hover {
   .social_nav {
     display: none;
   }
-   svg{
+   Micron-Icon--Streamline-Svg-Logos{
      width:40px ;
      height:40px ;
         }
