--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ a:hover {
     gap: 30px;
   }
 
-/*     .lines-container {
+    .lines-container {
     position: relative;
     width: 30px;
     height: 15px;
@@ -170,65 +170,8 @@ a:hover {
 
   .rotated .line-2 {
     transform: rotate(-45deg) translateY(-8px);
-  } */
+  }
 
-  #checkbox {
-  display: none;
-}
-
-.toggle {
-  position: relative;
-  width: 35px;
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 7px;
-  transition-duration: .5s;
-}
-
-.bars {
-  width: 100%;
-  height:3px;
-  background-color: #45dac0;
-  border-radius: 4px;
-}
-
-#bar2 {
-  transition-duration: .8s;
-}
-
-#bar1,#bar3 {
-  width: 70%;
-}
-
-#checkbox:checked + .toggle .bars {
-  position: absolute;
-  transition-duration: .5s;
-}
-
-#checkbox:checked + .toggle #bar2 {
-  transform: scaleX(0);
-  transition-duration: .5s;
-}
-
-#checkbox:checked + .toggle #bar1 {
-  width: 100%;
-  transform: rotate(45deg);
-  transition-duration: .5s;
-}
-
-#checkbox:checked + .toggle #bar3 {
-  width: 100%;
-  transform: rotate(-45deg);
-  transition-duration: .5s;
-}
-
-#checkbox:checked + .toggle {
-  transition-duration: .5s;
-  transform: rotate(180deg);
-}
 }
 
 @media (max-width: 600px) {
