--- a/style.css
+++ b/style.css
@@ -543,7 +543,7 @@ gap: 30px;
 }
   #Services h2{
     text-align: center;
-    font-size: 1.5rem;
+/*     font-size: 1.5rem; */
       margin-left: 0px;
   margin-bottom: 30px;
     
