--- a/style.css
+++ b/style.css
@@ -462,6 +462,9 @@ header p {
 /*  */
 
 /*  */
+#Services{
+  margin:50px 0px;
+}
 #Services h2{
   margin-left: 30px;
   margin-bottom: 50px;
@@ -534,6 +537,9 @@ header p {
 }
 
 @media (max-width:800px) {
+  #Services{
+  margin:30px 0px;
+}
 .cards{
 flex-direction: column;
 gap: 30px;
@@ -546,7 +552,6 @@ gap: 30px;
 /*     font-size: 1.5rem; */
       margin-left: 0px;
   margin-bottom: 30px;
-    
   }
 }
 
