--- a/style.css
+++ b/style.css
@@ -463,7 +463,7 @@ header p {
 
 /*  */
 #Services{
-  margin:50px 0px;
+  margin:50px 0px 0px 0px;
 }
 #Services h2{
   margin-left: 30px;
@@ -537,9 +537,6 @@ header p {
 }
 
 @media (max-width:800px) {
-  #Services{
-  margin:30px 0px;
-}
 .cards{
 flex-direction: column;
 gap: 30px;
