--- a/style.css
+++ b/style.css
@@ -496,6 +496,7 @@ header p {
   position: relative;
   width:25%;
   border-radius: 10px;
+  cursor: pointer;
 }
 .card:hover{
   transform: scale(1.05);
