--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+اه* {
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
@@ -449,7 +449,7 @@ header p {
 
 @media (max-width:750px) {
   #skills {
-    margin: 50px 0px 50px 0px;
+    margin: 50px 0px 100px 0px;
     text-align: center;
   }
 
