--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-اه* {
+* {
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
-  font-family: Arial, sans-serif;
+/*   font-family: Arial, sans-serif; */
 }
 
 html {
@@ -26,7 +26,7 @@ body {
 .navigation {
   display: flex;
   justify-content: space-between;
-  padding: 0px 30px 0px 30px;
+  padding: 20px 30px 0px 30px;
   flex-wrap: wrap;
   align-items: center;
   margin-bottom: 100px;
@@ -871,7 +871,7 @@ button:active {
 
 /*  */
 footer {
-/*   padding: 20px 0px; */
+  padding: 20px 0px;
   color: #ffffff;
   border-top: 1px #45dac13a solid;
   text-align: center;
