--- a/style.css
+++ b/style.css
@@ -529,7 +529,8 @@ header p {
   text-align: center;
   font-size: 1rem;
   color: rgba(255, 255, 255, 0.671);
-  margin: 10px 0 30px 0;
+/*   margin: 10px 0 30px 0; */
+  margin: 10px 0;
   line-height: 20px;
 }
 .card i{
