--- a/style.css
+++ b/style.css
@@ -466,6 +466,10 @@ header p {
     margin-top: -100px;
     margin-bottom: 50px;
   }
+  
+  .about-me p {
+  margin: 20px 0;
+}
 
   .learn p {
     width: auto;
@@ -477,6 +481,7 @@ header p {
     flex-direction: column-reverse;
     align-items: center;
     flex-wrap: wrap;
+    gap: 0px;
   }
 
   #about img {
@@ -979,4 +984,5 @@ footer {
   border-top: 1px #45dac13a solid;
   text-align: center;
 }
+
 
