--- a/style.css
+++ b/style.css
@@ -473,6 +473,7 @@ header p {
 
   .learn p {
     width: auto;
+    margin: 1px 0px;
   }
 
   .about-contant {
@@ -984,5 +985,6 @@ footer {
   border-top: 1px #45dac13a solid;
   text-align: center;
 }
+
 
 
