--- a/style.css
+++ b/style.css
@@ -954,7 +954,7 @@ button:active {
 }
 
 /*  */
-/* .up {
+.up {
   margin: 0px 50px 30px 0px;
   text-align: right;
   font-size: 40px;
@@ -976,7 +976,7 @@ button:active {
     text-align: right;
     font-size: 40px;
   }
-} */
+}
 
 /*  */
 footer {
@@ -985,6 +985,7 @@ footer {
   border-top: 1px #45dac13a solid;
   text-align: center;
 }
+
 
 
 
