--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ a:hover {
     gap: 30px;
   }
 
-     
+     /* 
    .lines-container {
   position: relative;
   width: 30px;
@@ -254,7 +254,49 @@ a:hover {
 
 .rotated .line-3 {
   transform: rotate(-45deg);
+} */
+   .lines-container {
+  position: relative;
+  width: 30px;
+  height: 22px;
+  cursor: pointer;
 }
+
+.line {
+  position: absolute;
+  width: 30px;
+  height: 4px;
+  background-color: #45dac0;
+  border-radius: 10px;
+  transition: all 0.4s ease;
+    z-index: 10;
+}
+
+.line-1 {
+  top: 0;
+}
+
+.line-2 {
+  top: 9px;
+}
+
+.line-3 {
+  bottom: 0;
+}
+
+.rotated .line-1 {
+  transform: rotate(45deg) translate(5px, 8px);
+}
+
+.rotated .line-2 {
+  opacity: 0;
+  transform: scaleX(0); 
+}
+
+.rotated .line-3 {
+  transform: rotate(-45deg) translate(5px, -8px);
+}
+ 
 }
 
 @media (max-width: 600px) {
@@ -1015,6 +1057,7 @@ footer {
   border-top: 1px #45dac13a solid;
   text-align: center;
 }
+
 
 
 
