--- a/style.css
+++ b/style.css
@@ -13,7 +13,12 @@ html {
 body {
   background-color: #0a192f;
 }
-.cursor {
+/* custom cursor in laptop */
+@media (min-width: 976px) {
+  * {
+    cursor: none;
+  }
+  .cursor {
   position: absolute;
   width: 20px;
   height: 20px;
@@ -1057,6 +1062,7 @@ footer {
   border-top: 1px #45dac13a solid;
   text-align: center;
 }
+
 
 
 
